test/syntax_not_checked/s0299_bulls_and_cows/hafis/starchat/result.txt
./test/syntax_check/s0299_bulls_and_cows/hafis/starchat/Solution.java:13: error: bad operand types for binary operator '>='
//@ ensures((\result >= 0) && (\result <= secret.length()));
                     ^
  first type:  java.lang.String
  second type: int
./test/syntax_check/s0299_bulls_and_cows/hafis/starchat/Solution.java:13: error: bad operand types for binary operator '<='
//@ ensures((\result >= 0) && (\result <= secret.length()));
                                       ^
  first type:  java.lang.String
  second type: int
2 errors
